--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-	<title>Bootstrap error page</title>
+	<title>Error page</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Cardo&family=Lemonada:wght@300&display=swap" rel="stylesheet">
